fix animation size on smaller screens

--- a/src/sass/new-starter-form.scss
+++ b/src/sass/new-starter-form.scss
@@ -479,7 +479,7 @@
     transform: translateX(-210px) skew(-20deg) ;
     position: absolute;
     top: 0;
-    width: 120%;
+    width: 125%;
     height: 100%;
     z-index: -2;
     cursor: default;
